# quiz-practice

./: .gitignore  LICENSE  README.md  launch.ps1  make.ps1  pyproject.toml
quiz_practice/: __init__.py
quiz_practice/app/: main.py
quiz_practice/utils/: utils.py
