[tool.poetry]
name = "quiz_practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyinstaller = "^5.3"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.4"
flake8-docstrings = "^1.6.0"
hacking = "^4.1.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    .venv
)
'''

[tool.flake8]
exclude = ".venv"
ignore = "H102,H103"
max-line-length = 120
